// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Button colors 1`] = `
.emotion-12 {
  margin: 16px;
}

.emotion-12 > *:not(:last-child) {
  margin-right: 16px;
}

.emotion-2 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: rgba(0,0,0,0.87);
  padding: 6px 8px;
}

.emotion-2:hover {
  background-color: rgba(0,0,0,0.08);
}

@media (hover:none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

.emotion-0 {
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

.emotion-6 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #6200ee;
  padding: 6px 8px;
}

.emotion-6:hover {
  background-color: rgba(98,0,238,0.08);
}

@media (hover:none) {
  .emotion-6:hover {
    background-color: transparent;
  }
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-6:hover {
    background-color: transparent;
  }
}

.emotion-6:hover:disabled {
  background-color: transparent;
}

.emotion-6:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

.emotion-10 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #03dac6;
  padding: 6px 8px;
}

.emotion-10:hover {
  background-color: rgba(3,218,198,0.08);
}

@media (hover:none) {
  .emotion-10:hover {
    background-color: transparent;
  }
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-10:hover {
    background-color: transparent;
  }
}

.emotion-10:hover:disabled {
  background-color: transparent;
}

.emotion-10:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

<div
  className="emotion-12 emotion-13"
>
  <button
    className="emotion-2 emotion-3"
    size="medium"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Default Button
    </span>
  </button>
  <button
    className="emotion-6 emotion-3"
    color="primary"
    size="medium"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Primary Button
    </span>
  </button>
  <button
    className="emotion-10 emotion-3"
    color="secondary"
    size="medium"
  >
    <span
      className="emotion-0 emotion-1"
    >
      Secondary Button
    </span>
  </button>
</div>
`;

exports[`Storyshots Components|Button variants 1`] = `
Array [
  .emotion-12 {
  margin: 16px;
}

.emotion-12 > *:not(:last-child) {
  margin-right: 16px;
}

.emotion-2 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: rgba(0,0,0,0.87);
  padding: 6px 8px;
}

.emotion-2:hover {
  background-color: rgba(0,0,0,0.08);
}

@media (hover:none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

.emotion-0 {
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

.emotion-6 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  padding: 5px 16px;
  border: 1px solid rgba(0,0,0,0.23);
}

.emotion-6:disabled {
  border: 1px solid rgba(0,0,0,0.26);
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-6:hover {
    background-color: transparent;
  }
}

.emotion-6:hover:disabled {
  background-color: transparent;
}

.emotion-6:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

.emotion-10 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: rgba(0,0,0,0.87);
  background-color: #e0e0e0;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
}

.emotion-10:focus {
  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12);
}

.emotion-10:active {
  box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12);
}

.emotion-10:disabled {
  color: rgba(0,0,0,0.26);
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  background-color: rgba(0,0,0,0.12);
}

.emotion-10:hover {
  background-color: #d5d5d5;
}

@media (hover:none) {
  .emotion-10:hover {
    background-color: #e0e0e0;
  }
}

.emotion-10:hover$disabled {
  background-color: rgba(0,0,0,0.12);
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-10:hover {
    background-color: transparent;
  }
}

.emotion-10:hover:disabled {
  background-color: transparent;
}

.emotion-10:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

<div
    className="emotion-12 emotion-13"
  >
    <button
      className="emotion-2 emotion-3"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Text Button
      </span>
    </button>
    <button
      className="emotion-6 emotion-3"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Outlined Button
      </span>
    </button>
    <button
      className="emotion-10 emotion-3"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Contained Button
      </span>
    </button>
  </div>,
  .emotion-12 {
  margin: 16px;
}

.emotion-12 > *:not(:last-child) {
  margin-right: 16px;
}

.emotion-0 {
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

.emotion-2 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #6200ee;
  padding: 6px 8px;
}

.emotion-2:hover {
  background-color: rgba(98,0,238,0.08);
}

@media (hover:none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

.emotion-6 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #6200ee;
  border: 1px solid rgba(98,0,238,0.5);
}

.emotion-6:hover {
  border: 1px solid #6200ee;
  background-color: rgba(98,0,238,0.08);
}

@media (hover:none) {
  .emotion-6:hover {
    background-color: transparent;
  }
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-6:hover {
    background-color: transparent;
  }
}

.emotion-6:hover:disabled {
  background-color: transparent;
}

.emotion-6:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

.emotion-10 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #fff;
  background-color: #6200ee;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
}

.emotion-10:focus {
  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12);
}

.emotion-10:active {
  box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12);
}

.emotion-10:disabled {
  color: rgba(0,0,0,0.26);
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  background-color: rgba(0,0,0,0.12);
}

.emotion-10:hover {
  background-color: #3700b3;
}

@media (hover:none) {
  .emotion-10:hover {
    background-color: #6200ee;
  }
}

.emotion-10:hover$disabled {
  background-color: rgba(0,0,0,0.12);
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-10:hover {
    background-color: transparent;
  }
}

.emotion-10:hover:disabled {
  background-color: transparent;
}

.emotion-10:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

<div
    className="emotion-12 emotion-13"
  >
    <button
      className="emotion-2 emotion-3"
      color="primary"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Text Button
      </span>
    </button>
    <button
      className="emotion-6 emotion-3"
      color="primary"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Outlined Button
      </span>
    </button>
    <button
      className="emotion-10 emotion-3"
      color="primary"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Contained Button
      </span>
    </button>
  </div>,
  .emotion-12 {
  margin: 16px;
}

.emotion-12 > *:not(:last-child) {
  margin-right: 16px;
}

.emotion-0 {
  width: 100%;
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

.emotion-2 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #03dac6;
  padding: 6px 8px;
}

.emotion-2:hover {
  background-color: rgba(3,218,198,0.08);
}

@media (hover:none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-2:hover {
    background-color: transparent;
  }
}

.emotion-2:hover:disabled {
  background-color: transparent;
}

.emotion-2:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

.emotion-6 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #03dac6;
  border: 1px solid rgba(3,218,198,0.5);
}

.emotion-6:hover {
  border: 1px solid #03dac6;
  background-color: rgba(3,218,198,0.08);
}

@media (hover:none) {
  .emotion-6:hover {
    background-color: transparent;
  }
}

.emotion-6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-6:hover {
    background-color: transparent;
  }
}

.emotion-6:hover:disabled {
  background-color: transparent;
}

.emotion-6:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

.emotion-10 {
  border: none;
  outline: 0;
  margin: 0;
  width: auto;
  overflow: visible;
  background: transparent;
  color: inherit;
  font: inherit;
  -webkit-font-smoothing: inherit;
  -moz-osx-font-smoothing: inherit;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  line-height: 1.75;
  -webkit-letter-spacing: 0.02857em;
  -moz-letter-spacing: 0.02857em;
  -ms-letter-spacing: 0.02857em;
  letter-spacing: 0.02857em;
  box-sizing: border-box;
  min-width: 64px;
  padding: 6px 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  border-radius: 4px;
  color: rgba(0,0,0,0.87);
  -webkit-transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4,0,0.2,1) 0ms,box-shadow 250ms cubic-bezier(0.4,0,0.2,1) 0ms,border 250ms cubic-bezier(0.4,0,0.2,1) 0ms;
  color: #fff;
  background-color: #03dac6;
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
}

.emotion-10:focus {
  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 3px 1px -2px rgba(0,0,0,0.12);
}

.emotion-10:active {
  box-shadow: 0px 1px 8px 0px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 3px 3px -2px rgba(0,0,0,0.12);
}

.emotion-10:disabled {
  color: rgba(0,0,0,0.26);
  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 2px 1px -1px rgba(0,0,0,0.12);
  background-color: rgba(0,0,0,0.12);
}

.emotion-10:hover {
  background-color: #018786;
}

@media (hover:none) {
  .emotion-10:hover {
    background-color: #03dac6;
  }
}

.emotion-10:hover$disabled {
  background-color: rgba(0,0,0,0.12);
}

.emotion-10:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (hover:none) {
  .emotion-10:hover {
    background-color: transparent;
  }
}

.emotion-10:hover:disabled {
  background-color: transparent;
}

.emotion-10:disabled {
  background-color: rgba(0,0,0,0.26);
  pointer-events: none;
  cursor: default;
}

<div
    className="emotion-12 emotion-13"
  >
    <button
      className="emotion-2 emotion-3"
      color="secondary"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Text Button
      </span>
    </button>
    <button
      className="emotion-6 emotion-3"
      color="secondary"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Outlined Button
      </span>
    </button>
    <button
      className="emotion-10 emotion-3"
      color="secondary"
      size="medium"
    >
      <span
        className="emotion-0 emotion-1"
      >
        Contained Button
      </span>
    </button>
  </div>,
]
`;
